--- a/src/content/graphos/delivery/schema-linter.mdx
+++ b/src/content/graphos/delivery/schema-linter.mdx
@@ -73,7 +73,7 @@ Click a rule's severity to set it to any of the following:
 
 ### Creating custom rules
 
-You can create custom prefix and suffix rules beyond the default ones provided. Refer to the linter rules page for a reference list of all default rules and [custom rule configuration instructions](./linter-rules#custom-rules).
+You can create custom prefix and suffix rules beyond the default ones provided. Refer to the [linter rules page](./linter-rules) for a reference list of all default rules and [custom rule configuration instructions](./linter-rules#custom-rules).
 
 ## Running the linter
 
