--- a/src/content/graphos/delivery/linter-rules.mdx
+++ b/src/content/graphos/delivery/linter-rules.mdx
@@ -3,7 +3,7 @@ title: GraphOS schema linter rules
 description: Reference
 ---
 
-This reference lists the built-in rules that you can enforce with [GraphOS schema linting](./schema-linter/). You can also create [custom rules](#custom-rules) to forbid or require prefixes or suffixes you define on specific schema elements.
+This reference lists the default rules that you can enforce with [GraphOS schema linting](./schema-linter/). You can also create [custom rules](#custom-rules) to forbid or require prefixes or suffixes you define on specific schema elements.
 
 Rules are categorized by the part(s) of your schema that they correspond to.
 
@@ -638,7 +638,7 @@ In the modal that opens, select the following:
 
 > **Note:** Rules are case-sensitive.
 
-Apollo dynamically generates the rule name based on your selections. For example, if you create a rule forbidding certain prefixes for Interfaces, the rule name would be `INTERFACE_FORBID_USER_DEFINED_PREFIX`.
+Apollo dynamically generates the rule name based on your selections. For example, if you create a rule forbidding certain prefixes for interfaces, the rule name would be `INTERFACE_FORBID_USER_DEFINED_PREFIX`.
 
 <img
   className="screenshot"
