--- a/src/content/graphos/delivery/linter-rules.mdx
+++ b/src/content/graphos/delivery/linter-rules.mdx
@@ -619,6 +619,6 @@ You can create custom prefix and suffix rules beyond the built-in ones. These ru
 
 This rule would include a list of strings to forbid as prefixes in interface names.
 
-A single rule can specify multiple strings to forbid _or_ require (not both) for a particular schema element. If you create a "require" rule and specify multiple strings, each schema element can use _any one_ of the specified strings. Rules forbidding strings forbid all of the strings.
+A single rule can specify multiple strings to forbid _or_ require (not both) for a particular schema element. If you create a "require" rule and specify multiple strings, each schema element can use _any one_ of the specified strings. Rules forbidding strings forbid _all_ the strings you include.
 
-Refer to the schema linter page for [custom rule configuration instructions](./schema-linter#creating-custom-rules).
+Refer to the schema linter page for [custom rule configuration instructions](./schema-linter#configure-custom-rules).
