--- a/src/content/graphos/delivery/schema-linter.mdx
+++ b/src/content/graphos/delivery/schema-linter.mdx
@@ -83,9 +83,9 @@ You can create custom linter rules to forbid or require certain strings as the p
 - Enums
 - Unions
 
-A single rule can specify multiple strings to forbid _or_ require (not both) for a particular schema element. If you create a "require" rule and specify multiple strings, each schema element can use _any one_ of the specified strings. Rules forbidding strings forbid all of the strings.
+A single rule can specify multiple strings to forbid _or_ require (not both) for a particular schema element. If you create a "require" rule and specify multiple strings, each schema element can use _any one_ of the specified strings. Rules forbidding strings forbid _all_ the strings you include.
 
-#### Custom rule configuration
+#### Configure custom rules
 
 To create a new rule, click the **+** button above your list of linter rules.
 
